src/components/Header/index.scss
@import "../../styles/index";

.Header {
  border-bottom: $header-border-size solid $primary-color;
  position: fixed;
  left: 0;
  right: 0;
  background-color: $background-color;
  z-index: 10;
  margin: 0 auto;
  min-width: $min-width;
  padding: $header-padding 0;
}

.Header-content {
  max-width: $max-width;
  margin: 0 auto;
}

.Header-logo {
  width: $logo-width;
  height: $logo-height;
  display: inline-block;
  vertical-align: middle;
  background-image: url('/images/logo/wink.png');
  background-repeat: round;
  transition: ease-in-out 0.1s;
  margin-left: $whitespace-11;
}

.Header-logo:active {
  background-image: url('/images/logo/open.png');
}

.Header-tabs {
  float: right;
  text-transform: uppercase;
  margin-right: $whitespace-10;
}

.HeaderTab {
  display: inline-block;
  min-width: $whitespace-14;
  height: $header-content-height;
  padding-left: $whitespace-5;
  padding-right: $whitespace-1;
  vertical-align: middle;
  letter-spacing: 0.5px;
  position: relative;

  a {
    font-size: $subtext;
    line-height: $header-content-height;
    color: $primary-color;
    text-decoration: none;
    display: block;
    text-align: left;
  }
}

.inactive-tab:hover,
.active-tab {
  font-weight: bold;
}

.tab-border {
  visibility: unset;
  position: absolute;
  top: 10px;
  left: 25px;

  .dot {
    display: inline-block;
    margin-right: 4px;
    background-color: $secondary-color;
    border-radius: 50%;
    width: 4px;
    height: 4px;
  }

  .line {
    display: inline-block;
    height: 4px;
    background: $secondary-color;
    animation: 0.3s ease-out 0s 1 slideInFromLeft;
  }

  .line-0 {
    max-width: $whitespace-9;
    width: $whitespace-9;
  }

  .line-1,
  .line-2 {
    max-width: $whitespace-12;
    width: $whitespace-12;
  }

  .line-3,
  .line-4 {
    max-width: $whitespace-10;
    width: $whitespace-10;
  }

  .line-5 {
    max-width: $whitespace-12;
    width: $whitespace-12;
  }
}

